# romp-v2

./: CMakeLists.txt  README.md  install.sh
InstrumentClient/: CMakeLists.txt  HelloWorld.cpp  InstrumentClient.cpp  InstrumentClient.h  InstrumentMain.cpp
Romp/: CMakeLists.txt
Romp/include/: Initialize.h
Romp/src/: RompLib.cpp
RompLib/: CMakeLists.txt
RompLib/include/: AccessHistory.h  Callbacks.h  Core.h  CoreUtil.h  DataSharing.h  Initialize.h  Label.h  LockSet.h  QueryFuncs.h  Record.h  Segment.h  ShadowMemory.h  TaskData.h  TaskLabel.h  ThreadData.h
RompLib/src/: AccessHistory.cpp  Callbacks.cpp  Core.cpp  CoreUtil.cpp  DataSharing.cpp  Initialize.cpp  Label.cpp  LockSet.cpp  QueryFuncs.cpp  Record.cpp  RompLib.cpp  Segment.cpp  ShadowMemory.cpp  TaskLabel.cpp
pkgs-src/dyninst-client/: Makefile  omp_race_client.cc
pkgs-src/romp-lib/: CMakeLists.txt
pkgs-src/romp-lib/src/: ompt_race.cpp
src/InstrumentClient/: BUCK  InstrumentMain.cpp
tests/: test.cpp  test_lib_inst.cpp
tests/OmpSCR_v2.0/config/templates/: user.cf.mk
